# xhs_service/biz/handler/health/health_service.go
@@ -1,27 +1,0 @@
-// Code generated by hertz generator.
-
-package health
-
-import (
-	"context"
-
-	"github.com/cloudwego/hertz/pkg/app"
-	"github.com/cloudwego/hertz/pkg/protocol/consts"
-	health "media_agent/hertz_gen/model/xhs_service/health"
-)
-
-// Health .
-// @router /health [GET]
-func Health(ctx context.Context, c *app.RequestContext) {
-	var err error
-	var req health.HealthRequest
-	err = c.BindAndValidate(&req)
-	if err != nil {
-		c.String(consts.StatusBadRequest, err.Error())
-		return
-	}
-
-	resp := &health.HealthResponse{Status: "ok"}
-
-	c.JSON(consts.StatusOK, resp)
-}
